--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 		<nav class="navbar row">
 			<div class="navbar-header">
 				<div class="keywords" style="color:#cccccc;font-size:1px;">Agence web à paris, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site</div>
-				<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.webp" alt="paris web design logo agence web meilleure agence" height="40" /></a>
+				<a class="navbar-brand" href="index.html"><img src="img/la-chouette-agence.webp" alt="paris web design logo agence web meilleure agence" height="50px" height="180px"/></a>
 				<div class="keywords" style="color:#cccccc;font-size:1px;">Agence web à paris, stratégie web, web design, illustrations, design de site web, site web, web, internet, site internet, site</div>
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
@@ -66,7 +66,7 @@
 	<div class="container bloc-lg">
 		<div class="row tight-width-whitespace">
 			<div class="col-sm-12">
-				<img src="img/logo.webp" class="center-block image-resize-mode" width="100" alt="La chouette agence, agence web paris, création logo paris" />
+				<img src="img/logo.webp" class="center-block image-resize-mode" width="100px" height="100px" alt="La chouette agence, agence web paris, création logo paris" />
 				<h1 class="text-center hero-bloc-text tc-white ">
 					La chouette agence.
 				</h1>
@@ -84,7 +84,7 @@
 	<div class="container bloc-md">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-				<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title.png" />
+				<p class="p1">La chouette agence est une agence de web design qui aide <br> les entreprises à devenir attractives et visibles sur Internet.</p>
 			</div>
 		</div>
 		<div class="row voffset-lg med-width-whitespace">
@@ -124,8 +124,9 @@
 		</div>
 		<div class="row voffset-lg voffset">
 			<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-				<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/citation.png" />
-
+				<p class="p2">"La chouette agence est une excellente agence web ! Les <br>  web designers ont réussi à capturer l'essence de notre <br>entreprise 
+				et à l'intéger à notre site. Cela nous a aidé à <br> doubler nos ventes en ligne à Lyon."</p>
+				<div class="p3">Maxime Guibard, PDG de À vous fourchettes</div>
 			</div>
 		</div>
 	</div>
@@ -154,7 +155,7 @@
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-				<img alt="agence web, agence web paris, web design paris, stratégie web" src="img/title2.png" />
+				<p class="p4">Nous travaillons avec beaucoup de clients, <br> voici nos réalisations.</p>
 			</div>
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
