Mise en responsive mobile les paragraphes page acceuil

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 	<div class="container bloc-md">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-				<p class="p1">La chouette agence est une agence de web design qui aide <br> les entreprises à devenir attractives et visibles sur Internet.</p>
+				<p class="p1">La chouette agence est une agence de web design qui aide les entreprises à devenir attractives et visibles sur Internet.</p>
 			</div>
 		</div>
 		<div class="row voffset-lg med-width-whitespace">
@@ -124,8 +124,7 @@
 		</div>
 		<div class="row voffset-lg voffset">
 			<div class="col-xs-12 col-md-8 col-md-offset-2 text-center">
-				<p class="p2">"La chouette agence est une excellente agence web ! Les <br>  web designers ont réussi à capturer l'essence de notre <br>entreprise 
-				et à l'intéger à notre site. Cela nous a aidé à <br> doubler nos ventes en ligne à Lyon."</p>
+				<p class="p2">"La chouette agence est une excellente agence web ! Les web designers ont réussi à capturer l'essence de notre entreprise et à l'intéger à notre site. Cela nous a aidé à doubler nos ventes en ligne à Lyon."</p>
 				<div class="p3">Maxime Guibard, PDG de À vous fourchettes</div>
 			</div>
 		</div>
@@ -155,7 +154,7 @@
 	<div class="container bloc-lg">
 		<div class="row">
 			<div class="col-sm-12 text-center">
-				<p class="p4">Nous travaillons avec beaucoup de clients, <br> voici nos réalisations.</p>
+				<p class="p4">Nous travaillons avec beaucoup de clients, voici nos réalisations.</p>
 			</div>
 		</div>
 		<div class="row tight-width-whitespace portfolio-row">
