--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 					Web design
 				</h2>
 				<p class="text-center ">
-					Que vous ayez un site web qui a besoin d&rsquo;un rafraîchissement ou que vous partiez de zéro, laissez-nous vous réaliser un design dont vous serez fier.
+					Que vous ayez un site web qui a besoin d&rsquo;un rafraîchissement ou que vous partiez de zéro, laissez-nous vous réaliser un <strong> web design </strong>dont vous serez fier.
 				</p>
 			</div>
 			<div class="col-sm-4">
@@ -104,7 +104,7 @@
 					&nbsp;Stratégie
 				</h2>
 				<p class="text-center ">
-					Plutôt que de suggérer des designs à la mode, nous travaillerons avec vous pour comprendre vos objectifs commerciaux afin de vous proposer le meilleur design possible.<br>
+					Plutôt que de suggérer des <strong>designs</strong> à la mode, nous travaillerons avec vous pour comprendre vos objectifs commerciaux afin de vous proposer le meilleur <strong>web design</strong> possible.<br>
 				</p>
 			</div>
 			<div class="col-sm-4">
@@ -115,7 +115,7 @@
 					Illustrations
 				</h2>
 				<p class="text-center ">
-					Un bon design n'est rien sans de bonnes illustrations. Laissez faire notre équipe de graphistes talentueux pour donner à vos pages une touche finale d'élégance.
+					Un bon <strong>web design</strong> n'est rien sans de bonnes illustrations. Laissez faire notre équipe de graphistes talentueux pour donner à vos pages une touche finale d'élégance.
 				</p>
 			</div>
 		</div>
@@ -219,7 +219,7 @@
 		<div class="row">
 			<div class="col-sm-12">
 				<p class="text-center white">
-					La chouette agence - Agence web basée à Lyon.<br>
+					La chouette agence - <strong>Agence web disgn</strong> basée à <strong>Lyon.</strong><br>
 				</p>
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
