--- a/page2.html
+++ b/page2.html
@@ -43,8 +43,6 @@
 						<a href="index.html">Accueil</a>
 					</li>
 					<li>
-					</li>
-					<li>
 						<a href="page2.html">Contact &gt;</a>
 					</li>
 				</ul>
@@ -115,6 +113,10 @@
 	</div>
 </div>
 <!-- bloc-7 END -->
+
+<!-- ScrollToTop Button -->
+<a class="bloc-button btn btn-d scrollToTop" onclick="scrollToTarget('1')"><span class="fa fa-chevron-up"></span></a>
+<!-- ScrollToTop Button END-->
 
 
 <!-- Footer - bloc-8 -->
