--- a/page2.html
+++ b/page2.html
@@ -6,6 +6,7 @@
     <meta name="description" content="une agence web, devenir attractives et visibles sur internet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="favicon.jpg">
+	<link rel="preload" as="font">
     
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
