--- a/index.html
+++ b/index.html
@@ -14,14 +14,14 @@
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
 	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
-	<link rel=”canonical” href="https://faouzihassane.github.io/P4_la_chouette_agence/" />
+	<link rel=”canonical” href="https://faouzihassane.github.io/P4_la_chouette_agence/index.html" />
 	
     
-	<script src="./js/jquery-2.1.0.js"></script>
-	<script src="./js/bootstrap.js"></script>
-	<script src="./js/blocs.js"></script>
-	<script src="./js/jquery.touchSwipe.js" defer></script>
-	<script src="./js/gmaps.js"></script>
+	<script async src="./js/jquery-2.1.0.js"></script>
+	<script async src="./js/bootstrap.js"></script>
+	<script async src="./js/blocs.js"></script>
+	<script async src="./js/jquery.touchSwipe.js"></script>
+	<script async src="./js/gmaps.js"></script>
 
     
 
