--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 	<link rel=”canonical” href="https://faouzihassane.github.io/P4_la_chouette_agence/" />
 	
     
-	<script src="./js/jquery-2.1.0.js"></script>
-	<script src="./js/bootstrap.js"></script>
-	<script src="./js/blocs.js"></script>
-	<script src="./js/jquery.touchSwipe.js"></script>
-	<script src="./js/gmaps.js"></script>
+	<script async src="./js/jquery-2.1.0.js"></script>
+	<script async src="./js/bootstrap.js"></script>
+	<script async src="./js/blocs.js"></script>
+	<script async src="./js/jquery.touchSwipe.js"></script>
+	<script async src="./js/gmaps.js"></script>
 
     
 
